Bug 406375 - Falkon KDE Frameworks Integration: KIO URLs are not saved in the browser history
Summary: Falkon KDE Frameworks Integration: KIO URLs are not saved in the browser history
Status: RESOLVED FIXED
Alias: None
Product: Falkon
Classification: Applications
Component: extensions (other bugs)
Version First Reported In: 3.1.0
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: David Rosca
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-04-09 19:53 UTC by Kevin Kofler
Modified: 2023-12-21 19:02 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 23.08.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kevin Kofler 2019-04-09 19:53:56 UTC
SUMMARY
URLs handled by KIO (through the KDE Frameworks Integration extension) rather than by QtWebEngine natively are not saved in the browser history (and hence also in the autocomplete suggestions).

STEPS TO REPRODUCE
1. Browse to, e.g., gopher://www.calcforge.org/1/ (requires kio_gopher ≥ 0.1.99), or man:bash (kio_man), or any other KIO-based URL.
2. Open the History menu.
3. Try to type the beginning of the URL to check for autocompletion support.

OBSERVED RESULT
The URL does not appear in the history nor in the autocompletion suggestions.

EXPECTED RESULT
The URL is remembered in the history and the autocompletion suggestions (like a native URL).

SOFTWARE/OS VERSIONS
Fedora 28 with updates
Falkon 3.1.0
KDE Plasma 5.13.5
KDE Frameworks 5.55.0
QtWebEngine 5.12.2
Qt (QtBase etc.) 5.11.3
kio-extras 18.08.3
kio-gopher 0.1.99
Comment 1 Kevin Kofler 2019-04-10 00:48:51 UTC
(The kio_gopher RPM I use is a rebuild of the Fedora 29 package for Fedora 28, from this Koji scratch build: https://koji.fedoraproject.org/koji/taskinfo?taskID=34063191 )
Comment 2 Kevin Kofler 2020-03-29 21:52:30 UTC
Ping?
Comment 3 Kevin Kofler 2020-06-25 22:58:12 UTC
Ping?
Comment 4 Juraj 2023-12-04 20:45:44 UTC
Git commit 759b3f5ea5ffe92d1735c3b63056203fb3e43251 by Juraj Oravec.
Committed on 04/12/2023 at 21:32.
Pushed by jurajo into branch 'master'.

History: Store addresses with custom schemes
FIXED-IN: 24.02.0

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>

M  +2    -1    src/lib/history/history.cpp

https://invent.kde.org/network/falkon/-/commit/759b3f5ea5ffe92d1735c3b63056203fb3e43251
Comment 5 Kevin Kofler 2023-12-04 20:54:21 UTC
Thanks. Though this is only going to work if the scheme is explicitly allowed, not if the "allow all unknown schemes" option is used.
Comment 6 Kevin Kofler 2023-12-04 20:57:00 UTC
Or is that option gone anyway? I have seen it while searching the code, but cannot find it again now.
Comment 7 Kevin Kofler 2023-12-04 20:59:05 UTC
I see that your code here: https://invent.kde.org/network/falkon/-/commit/205018775ce1c66b349d6b5a20abcb08e5ed19f6#1fcf115ea7bc0529cad80661 registers the scheme on first use, which is a bit suboptimal because it requires a browser restart, but then it will be listed in allowedSchemes. So I have no remaining concern with the code, it should work as is.

Thanks again for the fix!
Comment 8 Juraj 2023-12-21 19:02:26 UTC
Git commit 2bce10f4c822b5d8921e34f65bc48f49ec03a94a by Juraj Oravec.
Committed on 21/12/2023 at 19:52.
Pushed by jurajo into branch 'release/23.08'.

History: Store addresses with custom schemes
FIXED-IN: 23.08.5

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>

M  +2    -1    src/lib/history/history.cpp

https://invent.kde.org/network/falkon/-/commit/2bce10f4c822b5d8921e34f65bc48f49ec03a94a