History: Store addresses with custom schemes

BUG: 406375
FIXED-IN: 24.02.0

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>